Tue Sep  6 15:40:17 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* TAO_IDL/be/be_codegen.cpp (gen_stub_src_includes):

	  Reordered include directives to address CORBA::AbstractBase
	  order of parsing related template compile-time errors with g++
	  3.4 or better and some HP compilers.

Tue Sep  6 17:26:39 2005  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * tao/Endpoint.h

          Accidentally committed a file with the instrumented
          code. Reverted this and updated the markers.

Tue Sep  6 16:12:04 2005  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * tao/Connection_Handler.cpp:
        * tao/IIOP_Acceptor.cpp:
        * tao/IIOP_Connector.h:
        * tao/IIOP_Endpoint.h:
        * tao/IIOP_Endpoint.cpp:
        * tao/IIOP_Profile.h:
        * tao/Transport.h:
        * tao/Transport_Acceptor.h:

          The markers in these files accidentally includes the destructor
          which conflicts with the base class.

Tue Sep  6 13:29:04 2005  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * tao/IIOP_Endpoint.h:
        * tao/IIOP_Profile.h:
        * tao/Transport_Acceptor.h:
        * tao/Profile.h:

          Updated marker names as there was a mismatch in the code based
          and the specialization files.

Tue Sep  6 10:33:09 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* orbsvcs/examples/ORT/Gateway_i.h:

	  Added "AnyTypeCode_methods.h" include directive as a temporary
	  work around for g++ 3.4 or better and some HP compiler order of
	  parsing template related issues.

Tue Sep  6 11:32:31 2005  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * tao/Connection_Handler.h:
        * tao/Connection_Handler.cpp:
        * tao/IIOP_Connection_Handler.h:
        * tao/IIOP_Connection_Handler.cpp:
        * tao/Transport.h:
        * tao/Transport.cpp:
        * tao/IIOP_Transport.h:
        * tao/IIOP_Transport.cpp:
        * tao/Endpoint.h:
        * tao/IIOP_Endpoint.cpp: