@@ -10,10 +10,10 @@
  */
 //=============================================================================
 
+#include "da_testsC.h"
 #include "test_dynunion.h"
 #include "data.h"
 #include "analyzer.h"
-#include "da_testsC.h"
 #include "tao/DynamicAny/DynamicAny.h"
 #include "ace/OS_NS_string.h"
 
